Upgrade Java source/target from 11 to 17
- Apply instanceof pattern matching
- Add @Serial annotation to serialVersionUID fields
- Convert String.format to .formatted
- Replace Paths.get with Path.of
- Replace new Integer/Long with valueOf
- Convert multiline strings to text blocks
- Update CI workflow JDK version

All tests pass with JDK 17.