@@ -212,6 +212,6 @@ public enum SQLiteErrorCode {
     /** @see java.lang.Enum#toString() */
     @Override
     public String toString() {
-        return String.format("[%s] %s", this.name(), message);
+        return "[%s] %s".formatted(this.name(), message);
     }
 }
