@@ -145,7 +145,7 @@ public class PrepStmtTest {
         assertThat(rs.getInt(1)).isEqualTo(Integer.MAX_VALUE);
         assertThat(rs.getString(1)).isEqualTo(Integer.toString(Integer.MAX_VALUE));
         assertThat(rs.getDouble(1))
-                .isCloseTo(new Integer(Integer.MAX_VALUE).doubleValue(), offset(0.0001));
+                .isCloseTo(Integer.valueOf(Integer.MAX_VALUE).doubleValue(), offset(0.0001));
         assertThat(rs.next()).isFalse();
         rs.close();
         prep.close();
